--- a/package.json
+++ b/package.json
@@ -14,19 +14,32 @@
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
+    "@angular/fire": "^7.1.1",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "angular-4-data-table": "^0.4.6",
+    "bootstrap": "^4.6.1",
+    "core-js": "^3.19.0",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
+    "firebase": "^9.1.0",
+    "jquery": "^3.4.1",
+    "ng2-validation": "^4.2.0",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.5",
-    "@angular/cli": "~12.2.5",
+    "@angular-devkit/build-angular": "^12.2.6",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.8.0",
+    "@types/jquery": "^3.3.33",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
